# mydoc

./: 404.html  Pipfile  README.md  Resources.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.docs/images/algo/: queue.excalidraw  stack.excalidraw
.github/workflows/: ci.yml
.obsidian/: community-plugins.json  workspace.json
algo/arrays_data_structure/: index.html
algo/linked_list/: index.html
algo/queue/: index.html
algo/recursion/: index.html
algo/stack/: index.html
containers/platform/: index.html
database/postgresql/: index.html
docs/: index.md
docs/algo/: arrays_data_structure.md  linked_list.md  queue.md  recursion.md  stack.md
docs/containers/: platform.md
docs/database/: postgresql.md
docs/golang/datatypes/: maps.md
docs/golang/pointers/: tldr.md
docs/golang/testing/: error.md  helper.md
docs/js/: katex.js
docs/kubernetes/: calico.md  kube-vip.md  kubeadm.md
docs/network/: protocol.md  socat.md
docs/python/builtin-modules/: iterools.ipynb
docs/python/database/: sqlalchemy.md
docs/python/functions/: arguments.md
golang/datatypes/maps/: index.html
golang/pointers/tldr/: index.html
golang/testing/error/: index.html
golang/testing/helper/: index.html
kubernetes/calico/: index.html
kubernetes/kube-vip/: index.html
kubernetes/kubeadm/: index.html
network/protocol/: index.html
network/socat/: index.html
python/builtin-modules/iterools/: index.html
python/database/sqlalchemy/: index.html
python/functions/arguments/: index.html
search/: search_index.json
(+4 files in other folders)
