[project]
name = "mydoc"
version = "0.1.0"
description = ""
authors = [
    {name = "Julien-Fruteau",email = "julien.fruteau@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material (>=9.6.11,<10.0.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)",
    "mkdocs-redirects (>=1.2.2,<2.0.0)",
    "mkdocs-jupyter (>=0.25.1,<0.26.0)",
    "pymdown-extensions (>=10.14.3,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
